clap_derive/tests/ui/subcommand_and_parse.stderr
error: parse attribute is not allowed for subcommand
  --> $DIR/subcommand_and_parse.rs:16:24
   |
16 |     #[clap(subcommand, parse(from_occurrences))]
   |                        ^^^^^
